--- a/src/pages/G-engage.css
+++ b/src/pages/G-engage.css
@@ -5,7 +5,9 @@
 
 .top {
 	height: 100vh;
-	background-image: url('../assets/greenback.jpg');
+	background-color: rgba(0, 0, 0, 0.3);
+	background-image: url('../assets/greenback-3.jpg');
+
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -27,9 +29,54 @@
 }
 
 .title p {
-	font-size: 1.2rem;
+	font-size: 1.4rem;
 	width: 70%;
 	text-align: center;
+}
+
+.title img {
+	width: 70px;
+}
+
+.title form {
+	display: flex;
+	align-items: center;
+}
+
+.title input {
+	background-color: transparent;
+	outline: none;
+	border: none;
+	color: white;
+	font-size: 1.6rem;
+	border: 2px solid white;
+	padding: 10px 20px;
+	border-radius: 40px;
+	margin-right: 20px;
+}
+
+.title button {
+	background-color: white;
+	color: #2ec1ac;
+	border: none;
+	padding: 13px 20px;
+	margin: 0;
+	font-size: 1.4rem;
+	text-transform: uppercase;
+	border-radius: 40px;
+	border: 2px solid white;
+	transition: ease-out 0.2s;
+	cursor: pointer;
+}
+
+.title button:hover {
+	background-color: transparent;
+	color: white;
+	transition: ease-in 0.2s;
+}
+
+.title input::placeholder {
+	color: white;
 }
 
 .content {
@@ -69,7 +116,7 @@
 	padding: 3em;
 	position: absolute;
 	right: 15%;
-	top: 17%;
+	top: 10%;
 }
 
 .textBoxLeft {
@@ -79,10 +126,11 @@
 	padding: 3em;
 	position: absolute;
 	left: 15%;
-	top: 17%;
+	top: 10%;
 }
 
-.textBoxRight h1 {
+.textBoxRight h1,
+.textBoxLeft h1 {
 	margin-top: 0;
 }
 
