--- a/src/pages/G-engage.css
+++ b/src/pages/G-engage.css
@@ -21,6 +21,7 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	margin-bottom: 80px;
 }
 
 .title h1 {
@@ -53,6 +54,7 @@
 	padding: 10px 20px;
 	border-radius: 40px;
 	margin-right: 20px;
+	width: 530px;
 }
 
 .title button {
